--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 gap: 20px;
                 font-family: serif;
                 font-weight: 600;
+                padding: 40px;
             }
             h1 {
                 text-align: center;
